# aptos-core

api/types/src/: event_key.rs  transaction.rs
aptos-move/aptos-gas/: Cargo.toml
aptos-move/framework/aptos-framework/sources/: stake.move  stake.spec.move
aptos-move/gas-algebra-ext/: Cargo.toml
aptos-move/move-deps/: Cargo.toml
developer-docs-site/docs/sdks/: typescript-sdk.md
